# github-webhook-listener

./: .dockerignore  .editorconfig  .gitignore  .scalafmt.conf  .sdkmanrc  Cargo.toml  ChangeLog.md  Dockerfile  Dockerfile.fromCurrent  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  MIGRATION_COMPLETE.md  Makefile  README.md  SECURITY_HMAC.md  build.gradle.kts  build.sbt  github-webhook-listener.cabal  settings.gradle.kts  stack.yaml  versions.properties
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: build.yml  deploy.yml  refreshVersions.yml
app/: Main.hs
config/: application-dummy.conf  application-dummy.yaml
gradle/: libs.versions.toml
project/: native-utils.scala  plugins.sbt
resources/: config-sample.yaml  config.yaml  github-webhook-listener.service
scripts/: TestRequest.kt  java-exec  new-version.sh  push-release-tag  test-request.rs  test-request.sh
scripts/test-request/: Cargo.toml  README.md  main.rs
src/: AppConfig.hs  CmdLine.hs  Command.hs  Controller.hs  Logger.hs  Main.hs  Payload.hs  Server.hs  command.rs  config.rs  error.rs  event.rs  lib.rs  server.rs
src/commonMain/kotlin/org/alexn/hook/: AppConfig.kt  EventPayload.kt  OperatingSystem.kt  Server.kt
src/jvmMain/kotlin/org/alexn/hook/: Crypto.kt  FileIO.kt  ProcessExecution.kt
src/main/docker/: Dockerfile.jvm  Dockerfile.native  Dockerfile.native.old
src/main/kotlin/org/alexn/hook/: AppConfig.kt  CommandTrigger.kt  EventPayload.kt  Main.kt  OperatingSystem.kt  Routing.kt  Server.kt  exceptions.kt
src/main/resources/: logback.xml
src/main/scala/org/alexn/hook/: AppConfig.scala  CommandTrigger.scala  Endpoints.scala  EventPayload.scala  HelloWorld.scala  HookRoutes.scala  HookServer.scala  Jokes.scala  Main.scala  OperatingSystem.scala  Utils.scala
src/nativeMain/docker/: Dockerfile.native
src/nativeMain/kotlin/org/alexn/hook/: AppConfig.kt  CommandTrigger.kt  Crypto.kt  EventPayload.kt  FileIO.kt  Main.kt  OperatingSystem.kt  ProcessExecution.kt  Server.kt
src/nativeTest/kotlin/org/alexn/hook/: AppConfigTest.kt  ApplicationTest.kt  EventPayloadTest.kt  OperatingSystemKtTest.kt
src/test/kotlin/org/alexn/hook/: AppConfigTest.kt  ApplicationTest.kt  EventPayloadTest.kt  OperatingSystemKtTest.kt
src/test/resources/: logback-test.xml  real-payload.json
src/test/scala/org/alexn/ghwhl/: HelloWorldSpec.scala
src/test/scala/org/alexn/hook/: AppConfigSuite.scala
templates/: projects.html
test/: AppConfigSpec.hs  Main.hs
tests/: integration_tests.rs
